Add connectivity_internals to Forge Flight datasource type responses
